// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Communities /> render communities [] 1`] = `
<div
  className="container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Communities
    </title>
    <meta
      content="Communities | Description"
      name="description"
    />
  </HelmetWrapper>
  <CommunitiesHeader
    goToCreateCommunityScreen={[Function]}
  />
  <LoadingIndicator />
</div>
`;

exports[`<Communities /> render communities [{ id: 1 }] 1`] = `
<div
  className="container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Communities
    </title>
    <meta
      content="Communities | Description"
      name="description"
    />
  </HelmetWrapper>
  <CommunitiesHeader
    goToCreateCommunityScreen={[Function]}
  />
  <CommunitiesView
    communities={
      Array [
        Object {
          "id": 1,
        },
      ]
    }
  />
</div>
`;
